# vara-mcp-server

./: .eslintrc.cjs  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.cursor/: mcp.json  mcp.json.example
.github/workflows/: ci.yml  release.yml
docs/: cursor-setup.md  security.md  troubleshooting.md
docs/integration/: README.md  cursor-button.css  docusaurus-page.mdx  mintlify-page.mdx  standalone-snippet.html
my_dapp/: Cargo.toml  README.md  build.rs
my_dapp/.cargo/: config.toml
my_dapp/idl/: my_dapp.idl
my_dapp/src/: lib.rs
my_dapp/xtask/: Cargo.toml
my_dapp/xtask/src/: main.rs
