[package]
name = "my_dapp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = ["xtask"]

[dependencies]
sails-rs = "0.10"

[dev-dependencies]
gtest = "=1.10.0"
sails-rs = { version = "0.10", features = ["gtest"] }
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
sails-rs = { version = "0.10", features = ["wasm-builder"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
